#1202 Alteração das URL fixas de controles compartilhados para utilizar caminhos relativos

--- a/Glass/Layout.master
+++ b/Glass/Layout.master
@@ -38,6 +38,8 @@
         <indicador-sistema-ocupado></indicador-sistema-ocupado>
     </div>
     <script type="text/javascript">
+        const caminhoAbsolutoSite = '<%= ObterCaminhoAbsoluto() %>';
+
         Vue.prototype.$http = axios.create({
             baseURL: '<%= ConfigurationManager.AppSettings["backendUrl"] %>',
             headers: {
